--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.activity.MainActivity"></activity>
+        <activity android:name=".ui.activity.VideoPlayerActivity"
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
+            android:screenOrientation="landscape"></activity>
     </application>
 
 </manifest>
