--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -87,7 +87,7 @@
 
 
         </activity>
-        <activity android:name="com.musicplayer.ccl.music_player.ui.activity.AudioPlayerActivity">
+        <activity android:name="com.musicplayer.ccl.music_player.ui.activity.AudioPlayerActivity" android:launchMode="singleTop">
 
         </activity>
         <service android:name="com.musicplayer.ccl.music_player.service.AudioPlayerService"></service>
